<resources>
    <string name="app_name">Cool Baby</string>
    <string name="waring_internet_error">Network connection failed.</string>
    <string name="input_login_name">Please input login account.</string>
    <string name="input_password">Please input password.</string>
    <string name="login">Login</string>
    <string name="reg">Register</string>
    <string name="forget_password">Forget password</string>
    <string name="babyinfo">Baby Info</string>
    <string name="about_watch">About Watch</string>
    <string name="about_locator">About Locator</string>
    <string name="watch_setting">Watch Setting</string>
    <string name="locator_setting">Locator Setting</string>
    <string name="mail_list">Contact List</string>
    <string name="watch_fare">Watch Balance</string>
    <string name="locator_fare">Locator Balance</string>
    <string name="msg_record">Message Record</string>
    <string name="problem_feedback">Problem and Feeback</string>
    <string name="setting">Setting</string>
    <string name="APP_setting">APP Setting</string>
    <string name="back">Back</string>
    <string name="edit_head">Change Icon</string>
    <string name="relationship_of_baby">My Relationship with Baby:</string>
    <string name="watch_no">Watch Number</string>
    <string name="locator_no">Locator Number</string>
    <string name="cornet_family">Short Number/Family Number</string>
    <string name="gender">Sex</string>
    <string name="birthday">Birthday</string>
    <string name="grade">Grade</string>
    <string name="schoolinfo">School Info</string>
    <string name="homeinfo">Home Info</string>
    <string name="watch_QR_Code">Watch QR Code</string>
    <string name="locator_QR_Code">Locator QR Code</string>
    <string name="sweep_bound">Scan and add watch</string>
    <string name="sweep_bound_1">Scan and add locator</string>
    <string name="watch_bound_no">Watch Binding Number</string>
    <string name="locator_bound_no">Locator Binding Number</string>
    <string name="watch_firmware_version">Watch Firmware Version</string>
    <string name="locator_firmware_version">Locator Firmware Version</string>
    <string name="watch_carrieroperator">Watch Operator</string>
    <string name="locator_carrieroperator">Locator Operator</string>
    <string name="model">Model</string>
    <string name="configuration">Configuration</string>
    <string name="configuration_1">Configuration</string>
    <string name="GPS">GPS</string>
    <string name="WIFI">WIFI</string>
    <string name="three_axis_sensor">Three-axis Sensor</string>
    <string name="GPS_PS">High accuracy for outdoor locating</string>
    <string name="WIFI_PS">Signal-based accuracy for indoor locating</string>
    <string name="three_axis_sensor_PS">For Somatosensory answer</string>
    <string name="unbound">Unbind</string>
    <string name="input_phone_num">Please input your phone number.</string>
    <string name="confirm_phone_num">Please confirm your phone number.</string>
    <string name="PS_reg">(PS: Please register by parent\'s phone number.)</string>
    <string name="your_phone_num">Your phone number is...</string>
    <string name="next">Next</string>
    <string name="sent_identifying_code">Verification code reached your phone.</string>
    <string name="get_code">Obtain verification code</string>
    <string name="reg_suc">Register successfully.</string>
    <string name="reg_suc_bound">You registered successfully, please bind your locator.</string>
    <string name="bound_watch">Bind Watch</string>
    <string name="msg_notification">Message</string>
    <string name="change_pwd">Change Password</string>
    <string name="cache">Wipe Cache</string>
    <string name="about">About</string>
    <string name="common_problem">FAQ</string>
    <string name="logout">Log Out</string>
    <string name="input_pwd">Please input password.</string>
    <string name="your_pwd">Password</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="finish">Done</string>
    <string name="old_pwd">Old password</string>
    <string name="new_pwd">New password</string>
    <string name="album">Album</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="later">Remind me later</string>
    <string name="remind_later">Remind me later</string>
    <string name="check_flow">Check Traffic</string>
    <string name="check_fare">Check Balance</string>
    <string name="logining">Logging in...</string>
    <string name="loading">Loading...</string>
    <string name="add">Add</string>
    <string name="edit_relat_name">Edit relationship or name</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="grandfather">Grandpa1</string>
    <string name="grandmother">Grandma1</string>
    <string name="grandpa">Grandpa2</string>
    <string name="grandma">Grandma2</string>
    <string name="custom">Customize</string>
    <string name="add_phone_num">Add phone no.</string>
    <string name="confirm">Confirm</string>
    <string name="contact">Contacts</string>
    <string name="mh">:</string>
    <string name="contact_num">Contacts phone number</string>
    <string name="contact_family">Contacts short no./family no.</string>
    <string name="input_baby_name">Please input baby name.</string>
    <string name="input_watch_no">Please input watch no.</string>
    <string name="input_locator_no">Please input locator no.</string>
    <string name="input_cornet">Please input watch short no./family no.</string>
    <string name="input_cornet_1">Please input locator short no./family no.</string>
    <string name="choose_baby_gender">Please choose baby sex.</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="choose_baby_birthday">Please set baby birthday.</string>
    <string name="choose_baby_grade">Please set baby grade.</string>
    <string name="second">second</string>
    <string name="grade_a">Unschooled</string>
    <string name="grade_b">Primary Preshcool</string>
    <string name="grade_c">Middle Preshcool</string>
    <string name="grade_d">Large Preschool</string>
    <string name="grade_e">Preshcool</string>
    <string name="grade_f">Primary Shcool Grade1</string>
    <string name="grade_g">Primary Shcool Grade2</string>
    <string name="grade_h">Primary Shcool Grade3</string>
    <string name="grade_i">Primary Shcool Grade4</string>
    <string name="grade_j">Primary Shcool Grade5</string>
    <string name="grade_k">Primary Shcool Grade6</string>
    <string name="grade_l">Other</string>
    <string name="location">Location</string>
    <string name="schooltime">Class Time</string>
    <string name="morning">Forenoon</string>
    <string name="afternoon">Afternoon</string>
    <string name="week">Week</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="thesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="wait">Wait...</string>
    <string name="pwd_different">Password not match.</string>
    <string name="change_pwd_success">Password changed successfully.</string>
    <string name="input_reg_num">Please input your registered phone number.</string>
    <string name="set_school_location">Set school location.</string>
    <string name="set_home_location">Set home location.</string>
    <string name="save">Save</string>
    <string name="loading_watch_list">Loading watch info...</string>
    <string name="scan">Scan</string>
    <string name="watch_setting_PS">Watch will automatically sync when network is good. Notification will be received if succeeded.</string>
    <string name="locator_setting_PS">Locator will automatically sync when network is good. Notification will be received if succeeded.</string>
    <string name="personal_talk">Call Setting</string>
    <string name="automatic_answer">Automatically Answer</string>
    <string name="report_call_location">Report call location</string>
    <string name="somatosensory_answer">Somatosensory answer</string>
    <string name="reserved_power">Reserve Emergency Power</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="electronic_fence">Electronic fence</string>
    <string name="fall_off">Take off alarm</string>
    <string name="remote_control">Remote control</string>
    <string name="class_disabled">Disable in class</string>
    <string name="timing_starting">Timed switch</string>
    <string name="refused_stranger">Reject strange call</string>
    <string name="watch_off_alarm">Take off alarm</string>
    <string name="locator_off_alarm">Take off alarm</string>
    <string name="sound_display">"Sound and display</string>
    <string name="sound_vibrate">Sound</string>
    <string name="bright_time">Bright screen duration</string>
    <string name="class_disabled_time">Disable in class duration</string>
    <string name="turn_on_time">Power on time</string>
    <string name="turn_on_time_1">Power on time</string>
    <string name="turn_off_time">Power off time</string>
    <string name="turn_off_time_1">Power off time</string>
    <string name="time_turn_watch">Timed swtich</string>
    <string name="time_turn_locator">Timed swtich</string>
    <string name="watch_call">Incoming call</string>
    <string name="locator_call">Incoming call</string>
    <string name="watch_msg">Incoming message</string>
    <string name="locator_msg">Incoming message</string>
    <string name="sound">Ringtone</string>
    <string name="vibrate">Vibration</string>
    <string name="phone_sound">Ringtone</string>
    <string name="phone_vibrate">Vibration</string>
    <string name="latest_home_time">Latest home time</string>
    <string name="header_hint_normal">Pull to refresh</string>
    <string name="header_hint_ready">Loose to refresh</string>
    <string name="header_hint_loading">Loading...</string>
    <string name="header_last_time">Last update time:</string>
    <string name="footer_hint_normal">Check more</string>
    <string name="footer_hint_ready">Loose to load more</string>
    <string name="baby_nick">Baby nickname</string>
    <string name="dh">,</string>
    <string name="turn_on_watch">Power on</string>
    <string name="turn_off_watch">Power off</string>
    <string name="edit_relat">Edit relationship/name</string>
    <string name="add_cornet">Add family/short phone number</string>
    <string name="del_contact">Delete contacts</string>
    <string name="refresh">Refresh</string>
    <string name="sure_del_contact">Delete contacts?</string>
    <string name="edit_name">Edit name</string>
    <string name="school_defend">Defense</string>
    <string name="defendinfo_set">Defense setting</string>
    <string name="u_no_bound_watch">You didn\'t bind watch.</string>
    <string name="wait_admin_confirm">Waiting manage confirmation.</string>
    <string name="select_watch">Select watch</string>
    <string name="select_locator">Select locator</string>
    <string name="hold_and_spreak">Hold to talk</string>
    <string name="idea_feedback">Feedback</string>
    <string name="input_idea">Please write your feedback...</string>
    <string name="send">Send</string>
    <string name="my_feedback">My feedback</string>
    <string name="del">Delete</string>
    <string name="edit_photo">Edit photo</string>
    <string name="electronic_fence_name">Fense name</string>
    <string name="in_fence">Fense got out alarm</string>
    <string name="out_fence">Fense got in alarm</string>
    <string name="alarm_mode">Alarm way</string>
    <string name="check_fence">Check fense</string>
    <string name="fence_switch">Geofense switch</string>
    <string name="edit_phone">Edit phone number</string>
</resources>