<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:layout_margin="15dp"
    android:orientation="vertical">
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:background="@drawable/bg_dialog"
    	android:orientation="vertical">
	    
    <TextView 
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defendinfo_set"
        android:paddingTop="10dp"
	    android:paddingBottom="10dp"
        android:gravity="center"
        android:textSize="@dimen/textSize_normal"/>
	<View 
	    android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_col"/>
	<TextView 
	        android:id="@+id/tv_schoolinfo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/schoolinfo"
	        android:gravity="center"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:background="@drawable/bg_item"
	        android:textSize="@dimen/textSize_normal"/>
	<View 
	    android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
	<TextView 
	        android:id="@+id/tv_homeinfo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/homeinfo"
	        android:gravity="center"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:background="@drawable/bg_item"
	        android:textSize="@dimen/textSize_normal"/>
    <View 
	    android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_col"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_purple"
        android:layout_margin="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/cancel"
        android:textSize="@dimen/textSize_normal"
        android:textColor="@color/white"/>
	</LinearLayout>

</LinearLayout>