<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:orientation="vertical"
    android:padding="20dip" >
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:background="@drawable/bg_dialog"
    	android:layout_centerInParent="true">
	    <RelativeLayout 
	        android:layout_width="match_parent"
    		android:layout_height="wrap_content">
	        <TextView 
	            android:id="@+id/tv_title"
	            android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_centerInParent="true"
    			android:layout_marginTop="10dp"
    			android:text="@string/electronic_fence"
    			android:textSize="@dimen/textSize_big"
    			android:textColor="@color/theme_col"/>
	    </RelativeLayout>
	    <View 
	            android:layout_width="match_parent"
    			android:layout_height="1dp"
    			android:layout_marginTop="10dp"
    			android:background="@color/theme_col"/>
	    <LinearLayout 
	        android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:background="@color/white"
    		android:orientation="vertical"
    		>
	        <RelativeLayout 
	            android:id="@+id/rl_top"
	            android:layout_width="match_parent"
    			android:layout_height="40dp"
    			android:visibility="gone"
    			android:background="@drawable/bg_btn_grey_rectangle"
    			>
	            <TextView 
	                android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:layout_centerVertical="true"
    				android:text="@string/check_fence"
    				android:textSize="@dimen/textSize_normal"
    				android:textColor="@color/white"
    				android:layout_marginLeft="20dp"
    				android:gravity="center"/>
	            <TextView 
	                android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:layout_centerVertical="true"
    				android:layout_alignParentRight="true"
    				android:layout_marginRight="10dp"
    				android:text="..."
    				android:textSize="@dimen/textSize_normal"
    				android:textColor="@color/white"/>
	        </RelativeLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:background="@color/grey"
    			android:layout_marginTop="10dp"
    			>
	            <TextView 
	                android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:layout_marginLeft="20dp"
    				android:text="@string/electronic_fence_name"
    				android:textSize="@dimen/textSize_normal"
    				android:textColor="@color/white"
    				android:gravity="center"/>
	            <TextView 
	                android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:text="@string/mh"
    				android:textSize="@dimen/textSize_normal"
    				android:textColor="@color/white"
    				android:gravity="center"/>
	        </LinearLayout>
	        <EditText
		        android:id="@+id/et"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/bg_et"
		        android:layout_margin="10dp"
		        android:paddingLeft="10dp"
		        android:text=""
		        android:textSize="@dimen/textSize_normal"
		        android:textColor="@color/text_col"/>
	        <LinearLayout 
	            android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:background="@color/grey"
    			>
	            <TextView 
	                android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:text="@string/alarm_mode"
    				android:textSize="@dimen/textSize_normal"
    				android:textColor="@color/white"
    				android:layout_marginLeft="20dp"
    				android:gravity="center"/>
	            <TextView 
	                android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:text="@string/mh"
    				android:textSize="@dimen/textSize_normal"
    				android:textColor="@color/white"
    				android:gravity="center"/>
	        </LinearLayout>
	        <LinearLayout 
	            android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginTop="10dp"
    			android:layout_marginLeft="30dp"
    			android:layout_marginBottom="10dp"
    			android:orientation="vertical">
	            <RelativeLayout 
	                android:layout_width="match_parent"
    				android:layout_height="wrap_content">
	                
	            <TextView 
	                android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:text="@string/in_fence"
    				android:textSize="@dimen/textSize_normal"
    				android:gravity="center"/>
	            <CheckBox 
                    android:id="@+id/cb_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:button="@drawable/bg_turn"
                    android:layout_marginRight="15dp"/>
	            </RelativeLayout>
	            <RelativeLayout 
	                android:layout_width="match_parent"
    				android:layout_height="wrap_content"
    				android:layout_marginTop="10dp">
	                
	            <TextView 
	                android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:text="@string/out_fence"
    				android:textSize="@dimen/textSize_normal"
    				android:gravity="center"/>
	            <CheckBox 
                    android:id="@+id/cb_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:button="@drawable/bg_turn"
                    android:layout_marginRight="15dp"/>
	            </RelativeLayout>
	            <RelativeLayout 
	                android:layout_width="match_parent"
    				android:layout_height="wrap_content"
    				android:layout_marginTop="10dp">
	                
	            <TextView 
	                android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:text="@string/fence_switch"
    				android:textSize="@dimen/textSize_normal"
    				android:gravity="center"/>
	            <CheckBox 
                    android:id="@+id/cb_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:button="@drawable/bg_turn"
                    android:layout_marginRight="15dp"/>
	            </RelativeLayout>
	        </LinearLayout>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
    		android:layout_height="40dp">
	        <Button 
	            android:id="@+id/btn_cancel"
	            android:layout_width="0dp"
    			android:layout_height="match_parent"
    			android:layout_weight="1"
    			android:background="@drawable/bg_btn_white"
    			android:text="@string/cancel"
	        	android:textColor="@color/theme_col"
	        	android:textSize="@dimen/textSize_normal"
	        	style="?android:attr/borderlessButtonStyle"/>
	        <Button 
	            android:id="@+id/btn_middle"
	            android:layout_width="0dp"
    			android:layout_height="match_parent"
    			android:visibility="gone"
    			android:layout_marginRight="5dp"
    			android:layout_marginLeft="5dp"
    			android:layout_weight="1"
    			android:background="@drawable/bg_btn_red_wane"
    			android:text="@string/del"
	        	android:textColor="@drawable/text_col_w_g"
	        	android:textSize="@dimen/textSize_normal"
	        	style="?android:attr/borderlessButtonStyle"/>
	        <Button 
	            android:id="@+id/btn_OK"
	            android:layout_width="0dp"
    			android:layout_height="match_parent"
    			android:layout_weight="1"
    			android:background="@drawable/bg_btn_purple"
    			android:text="@string/confirm"
    			android:layout_marginStart="10dp"
                android:textColor="@color/white"
    			android:textSize="@dimen/textSize_normal"
    			style="?android:attr/borderlessButtonStyle"/>
	    </LinearLayout>
	</LinearLayout>

</RelativeLayout>