<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="bottom"
        android:background="@color/theme_col"
        android:padding="0dp" >

        <TextView
            android:id="@+id/textView_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/idea_feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_big" />

        <Button
            android:id="@+id/btn_left"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_menu_item"
            android:text="@string/back"
            android:textSize="@dimen/textSize_normal"
            android:textColor="@drawable/text_col_w_g" />
         <Button
            android:id="@+id/btn_right"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_menu_item"
            android:text="@string/my_feedback"
            android:textSize="@dimen/textSize_normal"
            android:textColor="@drawable/text_col_w_g" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_title"
        android:scrollbars="none" >
		<LinearLayout 
		    android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical">
		    <EditText 
		        android:id="@+id/et_content"
		        android:layout_width="match_parent"
        		android:layout_height="200dp"
        		android:hint="@string/input_idea"
        		android:gravity="top"
        		android:padding="10dp"
        		android:textSize="@dimen/textSize_normal"
        		android:background="@color/white"/>
		    <View 
		        android:layout_width="match_parent"
        		android:layout_height="20dp"
        		android:background="@color/bg_color"/>
		<Button 
		    android:id="@+id/btn_add_photo"
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_margin="10dp"
        	android:visibility="gone"
        	android:textSize="@dimen/textSize_normal"
        	android:background="@drawable/feedback_add"/>
		<Button 
		    android:id="@+id/btn_send"
		    android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:layout_margin="10dp"
        	android:text="@string/send"
        	android:textSize="@dimen/textSize_normal"
        	android:textColor="@color/white"
        	android:padding="10dp"
        	android:layout_gravity="center_horizontal"
        	android:background="@drawable/bg_btn_purple"/>
		</LinearLayout>
    </ScrollView>

</RelativeLayout>