<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:orientation="vertical"
    android:padding="5dip" >
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_centerInParent="true"
    	android:gravity="center"
    	android:background="@drawable/bg_dialog"
    	android:orientation="vertical"
    	android:layout_margin="10dp">
	    
    <TextView 
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_baby_name"
        android:paddingTop="10dp"
	    android:paddingBottom="10dp"
        android:gravity="center"
        android:textSize="@dimen/textSize_normal"/>
	<View 
	    android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_col"/>
	<LinearLayout 
	    android:id="@+id/ll_edit_relat"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/bg_item"
	    android:visibility="gone"
	    android:orientation="vertical">

	<TextView 
        android:id="@+id/tv_edit_relat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_relat"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/bg_item"
        android:textSize="@dimen/textSize_normal"/>
	<View 
	    android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/ll_edit_photo"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/bg_item"
	    android:visibility="gone"
	    android:orientation="vertical">
	    
	<TextView 
	        android:id="@+id/tv_edit_photo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_photo"
	        android:gravity="center"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:background="@drawable/bg_item"
	        android:textSize="@dimen/textSize_normal"/>
	<View 
	    android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/ll_edit_phone"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/bg_item"
	    android:visibility="gone"
	    android:orientation="vertical">
	    
	<TextView 
        android:id="@+id/tv_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_phone"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/bg_item"
        android:textSize="@dimen/textSize_normal"/>
	<View 
	    android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/ll_add_cornet"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/bg_item"
	    android:visibility="gone"
	    android:orientation="vertical">
	    
	<TextView 
        android:id="@+id/tv_add_cornet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_cornet"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/bg_item"
        android:textSize="@dimen/textSize_normal"/>
	<View 
	    android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/ll_del_contact"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/bg_item"
	    android:visibility="gone"
	    android:orientation="vertical">
	    
	<TextView 
        android:id="@+id/tv_del_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del_contact"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/bg_item"
        android:textSize="@dimen/textSize_normal"/>
	</LinearLayout>

    <View 
	    android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_col"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Dialog_Button"
        android:background="@drawable/bg_btn_purple"
        android:layout_margin="10dp"
        android:text="@string/cancel"
        android:textSize="@dimen/textSize_normal" 
        android:textColor="@color/white"/>
	</LinearLayout>

</RelativeLayout>